@@ -23,6 +23,9 @@ Version 0.6-23
 	plots. Two line types can be specified for plots comparing analogue
 	with non-analogue statistics.
 
+	New argument 'abline.lty', which defaults to "dashed", controls
+	plotting of the optimal ROC dissimilarity threshold.
+
 	* plot.minDC: argument 'lty.quantile' was not being used by the
 	graphical function that drew the quantiles of the pairwise D[ij]s.
 
